# .-Magang_ROS

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/pertama/lib/pertama/: publish  subscribe
install/pertama/share/pertama/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/py_pubsub/share/py_pubsub/: package.sh
install/test/share/ament_index/resource_index/parent_prefix_path/: test
install/test/share/test/: local_setup.sh  package.sh
log/: latest_build  latest_list
src/pertama/: CMakeLists.txt  package.xml
src/pertama/src/: publisher.cpp  subscriber.cpp
src/py_pubsub/: package.xml  setup.py
src/py_pubsub/py_pubsub/: subscriber.py
